fix: ajusta detalhes do evento

--- a/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
@@ -1560,18 +1560,15 @@
                                         </div>
                                         <div class="col-12 col-md-2">
                                             <label class="ftx-label">Data Início</label>
-                                            <input id="txtEventoDataInicio" class="form-control ftx-calculated" readonly
-                                                placeholder="dd/MM/yyyy" />
+                                            <input id="txtEventoDataInicio" class="form-control ftx-calculated" readonly />
                                         </div>
                                         <div class="col-12 col-md-2">
                                             <label class="ftx-label">Data Fim</label>
-                                            <input id="txtEventoDataFim" class="form-control ftx-calculated" readonly
-                                                placeholder="dd/MM/yyyy" />
+                                            <input id="txtEventoDataFim" class="form-control ftx-calculated" readonly />
                                         </div>
                                         <div class="col-12 col-md-2">
                                             <label class="ftx-label">Qtd Participantes</label>
-                                            <input id="txtEventoQtdParticipantes" class="form-control ftx-calculated" readonly
-                                                placeholder="Quantidade" />
+                                            <input id="txtEventoQtdParticipantes" class="form-control ftx-calculated" readonly />
                                         </div>
                                     </div>
                                 </div>
