fix: ajusta altura motorista kendo

--- a/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
@@ -944,6 +944,17 @@
         border-radius: 0.25rem !important;
     }
 
+    .ftx-section .k-dropdown,
+    .ftx-section .k-input {
+        height: 38px !important;
+        min-height: 38px !important;
+    }
+
+    .ftx-section .k-input-inner {
+        height: 38px !important;
+        line-height: 38px !important;
+    }
+
     .ftx-section .form-control:focus {
         border-color: #325d88;
         box-shadow: 0 0 0 0.2rem rgba(50, 93, 136, 0.15);
@@ -1105,6 +1116,7 @@
         display: flex;
         align-items: center;
         gap: 10px;
+        height: 38px;
     }
 
     .motorista-value img {
