fix: evita corte do motorista

--- a/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
@@ -953,6 +953,10 @@
     .ftx-section .k-input-inner {
         height: 38px !important;
         line-height: 38px !important;
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
+        display: flex !important;
+        align-items: center !important;
     }
 
     .ftx-section .form-control:focus {
@@ -1120,8 +1124,8 @@
     }
 
     .motorista-value img {
-        height: 30px;
-        width: 30px;
+        height: 26px;
+        width: 26px;
         object-fit: cover;
         border-radius: 50%;
     }
