fix: centraliza motorista na lista

--- a/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
@@ -1105,8 +1105,10 @@
     .motorista-item {
         display: flex;
         align-items: center;
+        justify-content: center;
         gap: 10px;
         min-height: 40px;
+        width: 100%;
     }
 
     .motorista-item img {
@@ -1119,8 +1121,10 @@
     .motorista-value {
         display: flex;
         align-items: center;
+        justify-content: center;
         gap: 10px;
         height: 38px;
+        width: 100%;
     }
 
     .motorista-value img {
