--- a/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/Viagens/Upsert.cshtml
@@ -1,4 +1,23 @@
-﻿@page
+﻿@*
+****************************************************************************************
+⚡ ARQUIVO: Upsert.cshtml
+--------------------------------------------------------------------------------------
+🎯 OBJETIVO     : Pagina de criacao/edicao de viagens com validacoes e seções completas.
+
+📥 ENTRADAS     : Model ViagemObj, ViewData (listas de finalidade, motorista, veiculo).
+
+📤 SAÍDAS       : POST /Viagens/Upsert (Create/Edit) e renderizacao de UI completa.
+
+🔗 CHAMADA POR  : Navegacao do menu Cadastros > Viagens.
+
+🔄 CHAMA        : ViagemUpsert.js (validacoes e eventos), Kendo UI e Syncfusion EJ2.
+
+📦 DEPENDÊNCIAS : jQuery, Kendo UI, Syncfusion EJ2, alerta.js, frotix.js.
+
+📝 OBSERVAÇÕES  : Controles Kendo devem ser inicializados via jQuery em ScriptsBlock.
+****************************************************************************************
+*@
+@page
 @addTagHelper*, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Syncfusion.EJ2.DropDowns;
 @using Syncfusion.EJ2;
@@ -348,14 +367,14 @@
                                             <span class="text-danger font-weight-light"
                                                 asp-validation-for="ViagemObj.Viagem.KmInicial"></span>
                                             <input id="txtKmInicial" class="form-control"
-                                                asp-for="ViagemObj.Viagem.KmInicial" type="number" />
+                                                asp-for="ViagemObj.Viagem.KmInicial" type="number" min="0" max="1000000" />
                                         </div>
                                         <div class="col-4 col-md-2">
                                             <label class="ftx-label" asp-for="ViagemObj.Viagem.KmFinal">Km Final</label>
                                             <span class="text-danger font-weight-light"
                                                 asp-validation-for="ViagemObj.Viagem.KmFinal"></span>
                                             <input id="txtKmFinal" class="form-control"
-                                                asp-for="ViagemObj.Viagem.KmFinal" type="number" />
+                                                asp-for="ViagemObj.Viagem.KmFinal" type="number" min="0" max="1000000" />
                                         </div>
                                         <div class="col-4 col-md-2">
                                             <label class="ftx-label">Km Percorrido</label>
